@@ -49,6 +49,12 @@
     	<link type="image/png" rel="icon" href="resources/images/icon.png">
 
 	    <style type="text/css">
+			body {
+				overflow: hidden;
+				overflow-x: hidden;
+				overflow-y: hidden;
+			}
+			
 	    	.fullscreen {
 	    		background-color: #000;
 	    	}
